Alteracao da index...

--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Projeto NLW</title>
 </head>
 <body>
+
+	<h1>Projeto NLW</h1>
 
 </body>
 </html>
